# orin-ros2-car

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  SMART_CAR_CONNECT_GUIDE.md  connect_car_vnc.ps1  fix_all.sh  ohcar_wifi_profile.example.xml  pytest.ini  restart_all.sh  start_ai_all.sh  start_ai_viewer.sh  start_bridge_on_jetson.sh  start_camera.py  test_models.py
.specify/: feature.json  init-options.json  integration.json
agent-runtime/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
agent-runtime/config/: locations.yaml  policies.yaml
agent-runtime/config/prompts/: alarm_system.txt  plan_system.txt  report_system.txt
agent-runtime/src/car_agent/: __init__.py  config.py  main.py
agent-runtime/src/car_agent/api/: app.py  events.py
agent-runtime/src/car_agent/clients/: __init__.py  asr_client.py  llm_client.py  motion_intent.py  ros_gateway.py  tts_client.py
agent-runtime/src/car_agent/features/: __init__.py  alarm_reports.py
agent-runtime/src/car_agent/graph/: __init__.py  builder.py  state.py
agent-runtime/src/car_agent/models/: __init__.py  api.py  motion.py  plan.py
agent-runtime/src/car_agent/repositories/: database.py
agent-runtime/src/car_agent/services/: __init__.py  plan_validator.py
agent-runtime/tests/: test_alarm_reports.py  test_api_workflow.py  test_asr_client.py  test_database.py  test_http_gateway_app.py  test_llm_client.py  test_mock_gateway.py  test_motion_intent.py  test_plan_validator.py  test_tts_notifications.py
android-remote-app/: GRADLE_SYNC_FIX.md  NEXT_STEPS.md  OFFLINE_TEST_WITH_MOCK.md  README.md  TEST_GUIDE.md  settings.gradle
docs/: AGENT_UI_ALARMS_REPORTS.md  AI_CAR_CONNECTION_AND_DEVELOPMENT.md  CI_CD.md  DEBUG_LOG_2026-07-12.md  LANGGRAPH_IMPLEMENTATION_STATUS.md  LEGACY_SMART_CAR_CONNECT_GUIDE.md  WEB_MAPPING_NAVIGATION_WORKBENCH.md  概要设计说明书.md  详细设计说明书.md
ros2_agent_ws/: README.md  pytest.ini
ros2_agent_ws/src/car_agent_interfaces/: CMakeLists.txt  package.xml
ros2_agent_ws/src/car_agent_interfaces/srv/: ControlPatrol.srv  CreatePatrol.srv  GetRobotSummary.srv
ros2_agent_ws/src/car_bringup/: package.xml  setup.cfg  setup.py
ros2_agent_ws/src/car_bringup/car_bringup/: __init__.py
ros2_agent_ws/src/car_bringup/launch/: system_launch.py
ros2_agent_ws/src/car_gateway/: package.xml  setup.cfg  setup.py
ros2_agent_ws/src/car_gateway/car_gateway/: __init__.py  gateway_bridge.py  motion.py
ros2_agent_ws/src/car_gateway/launch/: gateway_launch.py
ros2_agent_ws/src/car_gateway/test/: test_motion.py
ros2_agent_ws/src/car_patrol/: package.xml  setup.cfg  setup.py
ros2_agent_ws/src/car_patrol/car_patrol/: __init__.py  location_store.py  patrol_manager.py  task_state.py
ros2_agent_ws/src/car_patrol/config/: locations.yaml
ros2_agent_ws/src/car_patrol/launch/: patrol_launch.py
ros2_agent_ws/src/car_patrol/test/: test_location_store.py  test_task_state.py
ros2_car_remote_ws/: README.md
ros2_car_remote_ws/src/car_interfaces/: CMakeLists.txt  package.xml
ros2_car_remote_ws/src/car_interfaces/msg/: Alarm.msg
ros2_car_remote_ws/src/car_interfaces/srv/: NavigatePose.srv
ros2_car_remote_ws/src/icar_base_node/: CMakeLists.txt  package.xml
ros2_car_remote_ws/src/icar_base_node/include/icar_base_node/: odometry_integrator.hpp
ros2_car_remote_ws/src/icar_base_node/src/: base_node_X3.cpp  odometry_integrator.cpp
ros2_car_remote_ws/src/icar_base_node/test/: test_odometry_integrator.cpp
ros2_car_remote_ws/src/icar_bringup/: package.xml  setup.cfg  setup.py
ros2_car_remote_ws/src/icar_bringup/icar_bringup/: Ackman_driver_R2.py  Mcnamu_driver_X3.py  Mcnamu_driver_x1.py  calibrate_angular_R2.py  calibrate_angular_X3.py  calibrate_linear_R2.py  calibrate_linear_X3.py  driver_safety.py  patrol_4ROS.py  patrol_4ROS_R2.py  patrol_a1_R2.py  patrol_a1_X3.py  transform_utils.py
ros2_car_remote_ws/src/icar_bringup/launch/: icar_bringup_R2_launch.py  icar_bringup_X1_launch.py  icar_bringup_X3_launch.py
ros2_car_remote_ws/src/icar_bringup/test/: test_copyright.py  test_driver_safety.py  test_flake8.py  test_pep257.py  test_transform_utils.py
ros2_car_remote_ws/src/icar_navigation/: package.xml  setup.cfg  setup.py
ros2_car_remote_ws/src/icar_navigation/config/: arbiter.yaml  cartographer_2d.lua  ekf.yaml  fastdds_localhost.xml  nav2_foxy.yaml  patrol.yaml  patrol_route.yaml  safety.yaml
ros2_car_remote_ws/src/icar_navigation/icar_navigation/: __init__.py  alarm_utils.py  cmd_vel_arbiter.py  config_utils.py  map_artifacts.py  motion_policy.py  patrol_manager.py  patrol_policy.py  ros_alarm.py  route_loader.py  safety_manager.py  safety_policy.py
ros2_car_remote_ws/src/icar_navigation/launch/: demo.launch.py  mapping.launch.py  navigation.launch.py  safe_base.launch.py
ros2_car_remote_ws/src/icar_navigation/maps/: .gitkeep  campus_map.pbstream  campus_map.pgm  campus_map.yaml
ros2_car_remote_ws/src/icar_navigation/scripts/: save_map.sh  verify_navigation.sh
ros2_car_remote_ws/src/icar_navigation/test/: __init__.py  conftest.py  test_alarm_contract.py  test_config_contracts.py  test_map_artifacts.py  test_motion_policy.py  test_patrol_policy.py  test_route_loader.py  test_safety_policy.py  test_web_navigation.py
scripts/: agent_motion_gateway.py  check_ros2_status_wsl.sh  check_wpr_status_wsl.sh  collect_navigation_evidence.ps1  connect_car_vnc.ps1  deploy_ros2_navigation.ps1  finalize_ros2_humble_wsl.sh  install_wpr_simulation2_wsl.sh  mimo_tts_bridge.py  ros_d1_motion_probe.py  (+16 more)
smart_car_ws/src/car_ai_vision/: package.xml  setup.cfg  setup.py
smart_car_ws/src/car_ai_vision/car_ai_vision/: __init__.py  abnormal_behavior.py  ai_web_bridge.py  alarm_manager.py  capture_manager.py  crack_detector.py  mjpeg_bridge.py  visualizer.py  yolov8_inference.py
smart_car_ws/src/car_ai_vision/test/: test_abnormal_behavior.py  test_ai_web_bridge.py  test_alarm_manager.py  test_capture_manager.py  test_visualizer.py  test_yolov8_utils.py
smart_car_ws/src/car_interfaces/: CMakeLists.txt  package.xml
smart_car_ws/src/car_interfaces/msg/: Alarm.msg
(+159 files in other folders)
