[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "car-agent-runtime"
version = "0.1.0"
description = "Safe LangGraph orchestration runtime for the Orin ROS2 inspection car"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1",
  "httpx>=0.27,<1",
  "langgraph>=0.2,<1",
  "langgraph-checkpoint-sqlite>=2,<4",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "PyYAML>=6,<7",
  "uvicorn[standard]>=0.29,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.5,<1",
]

[project.scripts]
car-agent = "car_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/car_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
