<?xml version="1.0"?>
<package format="3">
  <name>car_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for patrol and safety orchestration nodes.</description>
  <maintainer email="maintainer@example.com">orin-ros2-car maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>car_patrol</exec_depend>
  <exec_depend>car_safety</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
