<?xml version="1.0"?>
<package format="3">
  <name>car_patrol</name>
  <version>0.1.0</version>
  <description>Deterministic multi-waypoint Patrol Manager for Nav2 Foxy.</description>
  <maintainer email="maintainer@example.com">orin-ros2-car maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>car_agent_interfaces</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
