<?xml version="1.0"?>
<package format="3">
  <name>car_interfaces</name>
  <version>1.0.0</version>
  <description>Safety and diagnostic interfaces for the iCar navigation stack.</description>
  <maintainer email="maintainer@example.com">iCar maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
