<?xml version="1.0"?>
<package format="3">
  <name>icar_base_node</name>
  <version>1.0.0</version>
  <description>Safe X3 chassis velocity integration and raw odometry publisher.</description>
  <maintainer email="maintainer@example.com">iCar maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
