<?xml version="1.0"?>
<package format="3">
  <name>icar_bringup</name>
  <version>1.0.0</version>
  <description>Hardware bringup and safety-hardened Rosmaster drivers for iCar.</description>
  <maintainer email="maintainer@example.com">iCar maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>icar_base_node</exec_depend>
  <exec_depend>icar_description</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
