<?xml version="1.0"?>
<package format="3">
  <name>icar_navigation</name>
  <version>1.0.0</version>
  <description>Safe command arbitration, fault handling, Cartographer, Nav2 and patrol orchestration for the X3 car.</description>
  <maintainer email="maintainer@example.com">iCar maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>car_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>cartographer_ros_msgs</exec_depend>
  <exec_depend>icar_base_node</exec_depend>
  <exec_depend>icar_bringup</exec_depend>
  <exec_depend>icar_description</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_recoveries</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
